# claude-science-hackathon

./: .gitignore  CLAUDE.md  README.md  antigenic_study.ipynb  assemble_site.py  download_data.sh  export_blog.py  full.html  index.html  pyproject.toml  regen_cv.py  run_nb.py  sitemap.xml  slides.md  vhid_HA1_grantham_HImatrix.csv
article/: index.html
blog/: content.md  full.html  index.html
css/: reader.css
docs/: full.html  index.html
js/: reader.js
results/: H1N1_univariate_fdr.csv  H3N2_univariate_fdr.csv  additional_analyses_summary.md  causal_results.json  causal_summary.csv  ci_sensitivity.csv  convergence.json  convergence_summary.csv  cv_grouped.json  cv_r2_folds.json  cv_r2_summary.csv  effect_sizes.csv  encoding_comparison.csv  encoding_jaccard.csv  encoding_transport_cv.csv  epistasis_tests.csv  fisherz_calibration_rates.csv  glycosylation_sequons.csv  identifiability_audit.csv  identifiability_clean_pairs.csv  identifiability_clean_pairs_detail.csv  kan_hybrid_results.json  kan_model_H1N1.pt  kan_model_H3N2.pt  kan_model_vhid_HA1.pt  kan_results.json  linkage_blocks.json  nonlinear_retest.csv  numbering_maps.json  per_property_drivers.csv  predictive_benchmark.csv  provenance_assay_conditions.csv  replication_stats.json  results_L2_validation.csv  sokan_results.json  stability_effect.csv  temporal_cv_h3n2.csv  token_attribution.csv  token_attribution_position_summary.csv  validation_report_H1N1.md  (+7 more)
site/: config.toml
src/: aa_properties.json  aa_transition_vector_toolkit.py  analysis.py  bspline_kan.py  causal_helpers.py  dag_validation.py  (+2 more)
(+48 files in other folders)
